# kokoro-voice-mcp-server

./: README.md  debug_audio_levels.py  pyproject.toml  test_speak.py  verify_fix.py
src/mcp_kokoro/: __init__.py
